# k8s-secrets

./: Cargo.toml  Dockerfile  Dockerfile.prebuilt  README.md  rbac.yaml  service-account.yaml  service.yaml
.github/workflows/: build-and-publish.yml
kubernetes/: deployment.yaml  external-secret.yaml
src/: main.rs
templates/: index.html
