[package]
name = "secret-reader"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
kube = { version = "0.95", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = { version = "0.12", features = ["serde-json"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
totp-lite = "2.0"
url = "2.5"
base32 = "0.5"
